Disable Primary Display Mirroring for Cars
Without this setting, the touchscreen event will not be handled
correctly. This setting exists in the non-AOSP lunch target so
only AOSP targets are affected.

Test: Flash and touchscreen works correctly.

Bug: 244748339
Change-Id: Ie1f8e0bc511c10feb13b8dddb1476e211b9764cb

--- a/product_files/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/product_files/overlay/frameworks/base/core/res/res/values/config.xml
@@ -27,8 +27,14 @@
     OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
     IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE
 -->
-<resources>
+
+<!-- These resources are around just to allow their values to be customized
+    for different hardware and product builds.  Do not translate. -->
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- This device does not support mobile data. -->
    <bool name="config_mobile_data_capable">false</bool>
+
+   <!-- Do not mirror content of the primary display to other displays (instrument cluster) -->
+   <bool name="config_localDisplaysMirrorContent">false</bool>
 </resources>
 
