Update the resource overlay
Correct android:targetPackage and android:targetName attributes.

Fix: 251523471
Test: m -j
Change-Id: Ie31c9ed8f6d0bde459c5a156b1db42f7672eb37c

--- a/rro_overlays/EvsOverlay/res/values/config.xml
+++ b/rro_overlays/EvsOverlay/res/values/config.xml
@@ -21,8 +21,14 @@
   Overlay resources to configure car service based on each OEM's preference.
   See also packages/services/Car/service/res/values/config.xml
 -->
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- A name of a camera device that provides the rearview through EVS service -->
     <string translatable="false" name="config_evsRearviewCameraId">/dev/video0</string>
+
+    <!-- The camera Activity name for EVS, if defined, the Activity will be launched by
+         CarEvsService. -->
+    <string name="config_evsCameraActivity" translatable="false">
+        com.google.android.car.evs/com.google.android.car.evs.CarEvsCameraPreviewActivity
+    </string>
 </resources>
 
